Hospital And Chamber All API done